--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,14 +25,11 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
         cache: maven
-    - name: Get Version
-      uses: ./
-      id: getVersion
     - name: Build with Maven
       run: |
         mvn clean package
         echo "git_hash=$git_hash" >> $GITHUB_ENV
-        echo ${{ steps.getVersion.outputs.version }} >> $GITHUB_ENV
+        echo "snapshotVersion=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
         echo "artifactPath=$(pwd)/builds" >> $GITHUB_ENV
         
     - uses: actions/upload-artifact@v3
