--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,11 +27,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: |
-        cd qGPTrust
         mvn clean package
         echo "git_hash=$git_hash" >> $GITHUB_ENV
         echo "snapshotVersion=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-        echo "artifactPath=$(pwd)/builds" >> $GITHUB_ENV
+        echo "artifactPath=$(pwd)/qGPTrust/builds" >> $GITHUB_ENV
         
     - uses: actions/upload-artifact@v3
       with:
