--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>gg.quartzdev</groupId>
     <artifactId>qGPTrust</artifactId>
-    <version>1.0</version>
+    <version>v1.0-beta3</version>
     <packaging>jar</packaging>
 
     <name>qGPTrust</name>
