--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,5 +34,5 @@ jobs:
         
     - uses: actions/upload-artifact@v3
       with:
-        name: qGPTrust-v${{ env.snapshotVersion }}-${{ env.git_hash }}.jar
+        name: qGPTrust-${{ env.snapshotVersion }}-${{ env.git_hash }}.jar
         path: ${{ env.artifactPath }}/qGPTrust-${{ env.snapshotVersion }}.jar
