udpated artifact zip file name

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,4 +35,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: qGPTrust-${{ env.snapshotVersion }}-${{ env.git_hash }}.jar
-        path: ${{ env.artifactPath }}/qGPTrust-${{ env.snapshotVersion }}.jar
+        path: ${{ env.artifactPath }}/qGPTrust-${{ env.snapshotVersion }}
