--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Build with Maven
       run: |
         mvn clean package
+        git_hash=$(git rev-parse --short "$GITHUB_SHA")
         echo "git_hash=$git_hash" >> $GITHUB_ENV
         echo "snapshotVersion=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
         echo "artifactPath=$(pwd)/target" >> $GITHUB_ENV
