--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,4 +36,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: qGPTrust-v${{ env.snapshotVersion }}-${{ env.git_hash }}.jar
-        path: ${{ env.artifactPath }}/qGPTrust-v${{ env.snapshotVersion }}-${{ env.git_hash }}.jar
+        path: ${{ env.artifactPath }}/qGPTrust-${{ env.snapshotVersion }}.jar
