--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
         </dependency>
 <!--        Grief Prevention-->
         <dependency>
-            <groupId>com.github.TechFortress</groupId>
+            <groupId>com.github.GriefPrevention</groupId>
             <artifactId>GriefPrevention</artifactId>
-            <version>16.18.1</version>
+            <version>16.18.4</version>
             <scope>provided</scope>
         </dependency>
 <!--        MiniMessage-->
