update ci to use new actions

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,12 +1,5 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java Artifact
+name: Create Plugin.jar
 
 on:
   push:
@@ -14,26 +7,30 @@ on:
 
 jobs:
   build:
-  
+    name: Create plugin.jar
+    if: ${{ !startsWith(github.event.head_commit.message, '[ci-skip]') }}
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'adopt'
-        cache: maven
-    - name: Build with Maven
-      run: |
-        mvn clean package
-        git_hash=$(git rev-parse --short "$GITHUB_SHA")
-        echo "git_hash=$git_hash" >> $GITHUB_ENV
-        echo "snapshotVersion=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-        echo "artifactPath=$(pwd)/target" >> $GITHUB_ENV
-        
-    - uses: actions/upload-artifact@v3
-      with:
-        name: qGPTrust-v${{ env.snapshotVersion }}-${{ env.git_hash }}.jar
-        path: ${{ env.artifactPath }}/qGPTrust-${{ env.snapshotVersion }}.jar
+      - name: Fetch Project
+        uses: actions/checkout@v4
+      - name: Setup Java 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'zulu'
+          cache: maven
+      - name: Build and Package Plugin
+        run: |
+          artifactPath="$(pwd)/target"
+          artifactName="$(mvn help:evaluate -Dexpression=project.build.finalName -q -DforceStdout)"
+          git_hash=$(git rev-parse --short "$GITHUB_SHA")
+          echo "artifactPath=${artifactPath}" >> $GITHUB_ENV
+          echo "artifactName=${artifactName}" >> $GITHUB_ENV
+          echo git_hash=${git_hash} >> $GITHUB_ENV
+          mvn clean package
+          mv "${artifactPath}/${artifactName}.jar" "${artifactPath}/${artifactName}-${git_hash}.jar"
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.artifactName }}-${{ env.git_hash }}.jar
+          path: ${{ env.artifactPath }}/${{ env.artifactName }}-${{ env.git_hash }}.jar
